# parc

./: .gitignore  CMakeLists.txt  Readme.md
include/: parc.h
src/: main.c
